<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="percent">%d%%</string>
    <string name="money">%.2f</string>
    <string name="base">Base</string>
    <string name="tip_percent">Tip Percent</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="input_base_cost_prompt">input base cost</string>
</resources>