<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:layout_width="205dp"
            android:layout_height="48dp"
            android:ems="10"
            android:id="@+id/baseCost"
            android:textAlignment="center"
            android:inputType="numberDecimal"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:importantForAutofill="no"
            android:hint="@string/input_base_cost_prompt" />

    <SeekBar
            android:layout_width="191dp"
            android:layout_height="34dp"
            android:id="@+id/tipSeekBar"
            android:progress="10"
            android:max="30"
            style="@style/Widget.AppCompat.SeekBar"
            app:layout_constraintTop_toTopOf="@+id/textView11"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/baseCost" />

    <TextView
            android:text="@string/base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            android:id="@+id/textView10"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="@+id/textView11"
            android:labelFor="@id/baseCost" />

    <TextView
            android:text="@string/tip_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            android:id="@+id/textView11"
            android:layout_marginTop="35dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp" />

    <TextView
            android:text="@string/tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            android:id="@+id/textView12"
            app:layout_constraintEnd_toEndOf="@+id/textView11"
            android:layout_marginTop="35dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:id="@+id/textView17"
            android:layout_marginTop="35dp" />

    <TextView
            android:text="@string/dark_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            android:layout_marginTop="35dp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tipPercent"
            app:layout_constraintTop_toTopOf="@+id/tipSeekBar"
            app:layout_constraintBottom_toBottomOf="@+id/tipSeekBar"
            app:layout_constraintStart_toEndOf="@+id/tipSeekBar"
            tools:text="10"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginStart="5dp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tipCost"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="8"
            app:layout_constraintStart_toStartOf="@+id/tipSeekBar" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalCost"
            app:layout_constraintTop_toTopOf="@+id/textView17"
            app:layout_constraintBottom_toBottomOf="@+id/textView17"
            app:layout_constraintStart_toEndOf="@+id/tipCost"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="88"
            app:layout_constraintStart_toStartOf="@+id/tipCost" />

    <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/darkMode"
            android:scaleX="1.2"
            android:scaleY="1.2"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/totalCost" />

</androidx.constraintlayout.widget.ConstraintLayout>